data/all_generated_tests/raw_wast_tests/unreachable_EdgeCaseFailuresinbr_table_1618.wast
;; 9. **Test Description:**     A `br_table` targeting a mix of valid and invalid (non-existent) labels where invalid labels are intentionally set, followed by a direct `unreachable` instruction to enforce traps.    **Constraint Checked:** Verifies trapping behavior when `br_table` includes deliberately invalid target labels.    **Edge Case Relation:** Ensures invalid label indices in `br_table` are handled with traps.

(assert_invalid
  (module (func $br_table_unreachable
    (block $label1
      (block $label2
        (i32.const 0)
        (br_table $label1 $label3 (unreachable))
      )
    )
  ))
  "unknown label"
)